--- a/warproducts/com.eclipsesource.maildemo.warproducts/.project
+++ b/warproducts/com.eclipsesource.maildemo.warproducts/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.eclipsesource.maildemo.tycho</name>
+	<name>com.eclipsesource.maildemo.warproducts</name>
 	<comment></comment>
 	<projects>
 	</projects>
