Updated tycho build to use tycho 0.12.0

--- a/tycho/com.eclipsesource.maildemo.tycho.feature/pom.xml
+++ b/tycho/com.eclipsesource.maildemo.tycho.feature/pom.xml
@@ -31,8 +31,8 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.sonatype.tycho</groupId>
-				<artifactId>maven-osgi-packaging-plugin</artifactId>
+				<groupId>${tycho-groupid}</groupId>
+				<artifactId>tycho-packaging-plugin</artifactId>
 				<version>${tycho-version}</version>
 				<configuration>
 					<deployableFeature>true</deployableFeature>
@@ -98,7 +98,7 @@
 				<executions>
 					<execution>
 						<id>make-assembly</id>
-						<phase>install</phase>
+						<phase>verify</phase>
 						<goals>
 							<goal>single</goal>
 						</goals>
