--- a/tycho/com.eclipsesource.maildemo.tycho.feature/templates/WEB-INF/eclipse/configuration/config.ini
+++ b/tycho/com.eclipsesource.maildemo.tycho.feature/templates/WEB-INF/eclipse/configuration/config.ini
@@ -15,16 +15,18 @@ osgi.bundles=com.ibm.icu.base@start,\
   org.eclipse.equinox.servletbridge.extensionbundle,\
   org.eclipse.osgi.services@start,\
   org.eclipse.help@start,\
-  org.eclipse.rap.design.example@start,\
-  org.eclipse.rap.equinox.registry,\
-  org.eclipse.rap.jface@start,\
-  org.eclipse.rap.rms.data@start,\
-  org.eclipse.rap.rms.ui@start,\
-  org.eclipse.rap.rwt.q07,\
   org.eclipse.rap.rwt@start,\
+  org.eclipse.rap.rwt.q07,\
+  org.eclipse.rap.jface@start,\
+  org.eclipse.core.databinding@start,\
+  org.eclipse.core.databinding.observable@start,\
+  org.eclipse.core.databinding.property@start,\
+  org.eclipse.core.databinding.beans@start,\
+  org.eclipse.rap.jface.databinding@start,\
   org.eclipse.rap.ui.forms@start,\
   org.eclipse.rap.ui@start,\
   org.eclipse.rap.ui.views@start,\
   org.eclipse.rap.ui.workbench@start,\
+  org.eclipse.rap.design.example@start,\
   com.eclipsesource.maildemo.tycho@start
 osgi.bundles.defaultStartLevel=4
